[project]
name = "algorithms-with-python"
version = "0.1.0"
description = "implementing algorithms with python"
readme = "README.md"
authors = [{ name = "safecorners", email = "safecorners.mobile@gmail.com" }]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
