[project]
name = "algorithms-with-python"
version = "0.1.0"
description = "implementing algorithms with python"
readme = "README.md"
authors = [{ name = "safecorners", email = "safecorners.mobile@gmail.com" }]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/*"]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.9.9",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "-vv"
]
pythonpath = ["src"]
log_cli = true
log_cli_level = "INFO"

[tool.mypy]
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_untyped_decorators = true
disallow_incomplete_defs = true
disallow_any_unimported = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts =true
warn_unused_ignores = true
warn_return_any = true
show_error_codes = true
strict_equality = true
mypy_path = "src"